feat(team): list user teams
